Prevent white space on collapsing column

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -142,6 +142,7 @@
     overflow: hidden;
     padding: 0;
     border-left: none;
+    display: none;
   }
 }
 
